Fixed some CSS with video settings on mobile screens.

--- a/views/content/style/mobile/video.css
+++ b/views/content/style/mobile/video.css
@@ -131,6 +131,10 @@ STYLE VIDEO TEXT
 	align-items: center;
 }
 
+.container .video-contents .videotext #videosettings select {
+	font-size: 25px;
+}
+
 .container .video-contents .videotext #subtitles {
 	display: none;
 	flex-direction: column;
